benchmarks checking script

--- a/tests/benchmarks/todo
+++ b/tests/benchmarks/todo
@@ -4,3 +4,7 @@ szymanski.cc:
 	sv-comp has done the same thing
 hehner_c11:
 	implement select instruction
+tbar_unfenenced:
+	Doesn't have bug in 2 unrolling
+peterson_assume_unfenced_thr3
+	some redundent loads and assume conditions are removed
