--- a/tests/benchmarks_set/todo
+++ b/tests/benchmarks_set/todo
@@ -1,14 +1,18 @@
+Benchmark tpoll:
+	has two phi nodes in single basic block working on two different variables coming from the same branch,
+	since current implementation takes valiue from the basic block maked in phi, the second phi node overwites the values of first variables. How to fix it?
+	also has xor operation: not implemented
+	with <=30 opt-bisect-limit, has br i1 true
+	with no opt-bisect-limit, has phi i32* nodes
+
+
+__________________________________________
 szymanski.cc: 
 	no need to load twice during the exit protocol
 	acc to algo (wiki), the exit checking is only for proceeses numbered later, but the Tracer's testcase is doing this for all
 	sv-comp has done the same thing
-hehner_c11:
-	implement select instruction
 tbar_unfenenced:
 	Doesn't have bug in 2 unrolling
-peterson_assume_unfenced_thr3
-	some redundent loads and assume conditions are removed - not anymore
-	Implemented PhiNode
 lamport_assume_fenced
 	the three comments fencess are not required
 	VBMC K=4, L=6 is not giving error without those
